--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
       </div>
     </div>
 
+    <!-- Mobile touch controls -->
+    <div id="touchControls" class="touch-controls" hidden aria-label="Touch controls">
+      <div class="joystick" aria-label="Joystick">
+        <div id="joyBase" class="joy-base">
+          <div id="joyKnob" class="joy-knob" aria-hidden="true"></div>
+        </div>
+      </div>
+
+      <button id="actionBtn" class="action-btn" type="button" aria-label="Interact">
+        A
+      </button>
+    </div>
+
     <script src="./script.js" defer></script>
   </body>
 </html>
