Implement D-pad button functionality in HUD and enhance button styles. Added event listeners for pointer interactions and updated HTML structure for controls.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <div class="hud-left">
           <div class="hud-title">Controls</div>
           <div class="hud-controls">
-            <span class="kbd">↑</span><span class="kbd">←</span><span class="kbd">↓</span><span class="kbd">→</span>
+            <button class="kbd kbd-btn" type="button" data-vkey="ArrowUp" aria-label="Move up">↑</button>
+            <button class="kbd kbd-btn" type="button" data-vkey="ArrowLeft" aria-label="Move left">←</button>
+            <button class="kbd kbd-btn" type="button" data-vkey="ArrowDown" aria-label="Move down">↓</button>
+            <button class="kbd kbd-btn" type="button" data-vkey="ArrowRight" aria-label="Move right">→</button>
             <span class="muted">Move</span>
             <span class="sep">•</span>
             <span class="kbd">Enter</span>
