Add wizard-style question flow for finale unlock. Introduced back button for navigation, updated modal interactions, and enhanced validation for multiple-choice questions. Added fishing mechanics and vehicle interactions, including new trailer homes and vehicle drawing logic. Updated styles for finale ring animation.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <div id="modalForm"></div>
 
           <div class="row">
+            <button id="modalBackBtn" class="btn btn-ghost" type="button" hidden>Back</button>
             <button id="modalSubmitBtn" class="btn" type="button">Submit</button>
             <button id="modalHintBtn" class="btn btn-ghost" type="button">Hint</button>
           </div>
