--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="brand">
           <div class="brand-mark" aria-hidden="true">JM</div>
           <div class="brand-text">
-            <div class="brand-title">Town Trials</div>
-            <div class="brand-subtitle">Walk → enter houses → solve challenges → unlock the secret</div>
+            <div class="brand-title" id="brandTitle">Town Trials</div>
+            <div class="brand-subtitle" id="brandSubtitle">Walk → enter houses → solve challenges → unlock the secret</div>
           </div>
         </div>
 
@@ -38,19 +38,19 @@
     <main id="main" class="container main">
       <section class="hud card" aria-label="Game HUD">
         <div class="hud-left">
-          <div class="hud-title">Controls</div>
+          <div class="hud-title" id="controlsTitle">Controls</div>
           <div class="hud-controls">
             <button class="kbd kbd-btn" type="button" data-vkey="ArrowUp" aria-label="Move up">↑</button>
             <button class="kbd kbd-btn" type="button" data-vkey="ArrowLeft" aria-label="Move left">←</button>
             <button class="kbd kbd-btn" type="button" data-vkey="ArrowDown" aria-label="Move down">↓</button>
             <button class="kbd kbd-btn" type="button" data-vkey="ArrowRight" aria-label="Move right">→</button>
-            <span class="muted">Move</span>
+            <span class="muted" id="controlsMove">Move</span>
             <span class="sep">•</span>
             <span class="kbd">Enter</span>
-            <span class="muted">Interact</span>
+            <span class="muted" id="controlsInteract">Interact</span>
             <span class="sep">•</span>
             <span class="kbd">Esc</span>
-            <span class="muted">Close</span>
+            <span class="muted" id="controlsClose">Close</span>
           </div>
         </div>
 
@@ -119,11 +119,28 @@
 
       <footer class="footer">
         <p class="muted">
-          This is a static site (no server). Progress is saved locally on this device. Customize challenges in
+          <span id="footerText">This is a static site (no server). Progress is saved locally on this device.</span>
           <span class="mono">script.js</span>.
         </p>
       </footer>
     </main>
+
+    <!-- Language modal (shown first) -->
+    <div id="langOverlay" class="modal-overlay" hidden>
+      <div class="modal" role="dialog" aria-modal="true" aria-labelledby="langTitle">
+        <div class="modal-head">
+          <div class="modal-title" id="langTitle">Choose language</div>
+          <div class="pill">Language</div>
+        </div>
+        <div class="modal-body">
+          <p class="muted" id="langDesc">Select English or Español to start.</p>
+          <div class="row">
+            <button id="langEnBtn" class="btn" type="button">English</button>
+            <button id="langEsBtn" class="btn btn-ghost" type="button">Español</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Challenge dialog -->
     <div id="modalOverlay" class="modal-overlay" hidden>
@@ -148,6 +165,25 @@
 
           <div id="modalHint" class="hint" hidden></div>
           <div id="modalResult" class="result" aria-live="polite"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Intro modal (shown before game starts) -->
+    <div id="introOverlay" class="modal-overlay" hidden>
+      <div class="modal" role="dialog" aria-modal="true" aria-labelledby="introTitle">
+        <div class="modal-head">
+          <div class="modal-title" id="introTitle">Welcome to Javi’s Life</div>
+          <div class="pill">Intro</div>
+        </div>
+        <div class="modal-body">
+          <p class="muted">
+            A game where you explore the journey of life — walk the map, enter houses, answer questions, and reach the
+            finale.
+          </p>
+          <div class="row">
+            <button id="introStartBtn" class="btn" type="button">Start</button>
+          </div>
         </div>
       </div>
     </div>
