Revise project structure and update main menu to "Project Menu" with new styling. Enhance README to reflect project collection and individual game descriptions. Update links for game selection and improve overall layout for better user experience.

--- a/projects/game-selector/index.html
+++ b/projects/game-selector/index.html
@@ -152,8 +152,8 @@
       <div id="gameSelection" class="game-selection">
         <h1>🎮 Choose Your Game</h1>
         <div class="game-buttons">
-          <a href="../../will-you-be-my-valentine/dist/index.html" class="game-btn">
-            💕 Valentine Game
+          <a href="../valentine-game/index.html" class="game-btn">
+            💕 Super Duper Secret Game
           </a>
           <a href="../2-4/index.html" class="game-btn">
             💍 2/4
