--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shiba Neighborhood Explorer</title>
+    <title>Project Menu</title>
     <meta
       name="description"
-      content="Explore a cute neighborhood with an interactive Shiba! Visit houses and play games."
+      content="Choose a project to explore - games, adventures, and more!"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,112 +14,167 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem 1rem;
+      }
+
+      .container {
+        max-width: 900px;
+        width: 100%;
+      }
+
+      .header {
+        text-align: center;
+        margin-bottom: 3rem;
+        color: white;
+      }
+
+      .header h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        margin-bottom: 0.5rem;
+        text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      .header p {
+        font-size: 1.25rem;
+        opacity: 0.9;
+      }
+
+      .projects-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 1.5rem;
+        margin-bottom: 2rem;
+      }
+
+      .project-card {
+        background: white;
+        border-radius: 16px;
+        padding: 2rem;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s, box-shadow 0.3s;
+        text-decoration: none;
+        color: inherit;
+        display: block;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .project-card::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 4px;
+        background: linear-gradient(90deg, #667eea, #764ba2);
+        transform: scaleX(0);
+        transition: transform 0.3s;
+      }
+
+      .project-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+      }
+
+      .project-card:hover::before {
+        transform: scaleX(1);
+      }
+
+      .project-icon {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+        display: block;
+      }
+
+      .project-title {
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-bottom: 0.5rem;
+        color: #333;
+      }
+
+      .project-description {
+        color: #666;
+        font-size: 0.95rem;
+        line-height: 1.6;
+      }
+
+      .project-badge {
+        display: inline-block;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        padding: 0.25rem 0.75rem;
+        border-radius: 12px;
+        font-size: 0.75rem;
+        font-weight: 600;
+        margin-top: 1rem;
+      }
+
+      @media (max-width: 768px) {
+        .header h1 {
+          font-size: 2rem;
+        }
+
+        .header p {
+          font-size: 1rem;
+        }
+
+        .projects-grid {
+          grid-template-columns: 1fr;
+        }
+      }
+    </style>
   </head>
   <body>
-    <header class="site-header">
-      <div class="container header-inner">
-        <div class="brand">
-          <div class="brand-mark" aria-hidden="true">🐕</div>
-          <div class="brand-text">
-            <div class="brand-title">Shiba Neighborhood</div>
-            <div class="brand-subtitle">Explore houses and play games!</div>
-          </div>
-        </div>
+    <div class="container">
+      <div class="header">
+        <h1>🎮 Project Menu</h1>
+        <p>Choose a project to explore</p>
       </div>
-    </header>
 
-    <main id="main" class="container main">
-      <section class="hud card" aria-label="Game HUD">
-        <div class="hud-left">
-          <div class="hud-title">Controls</div>
-          <div class="hud-controls">
-            <button class="kbd kbd-btn" type="button" data-vkey="ArrowUp" aria-label="Move up">↑</button>
-            <button class="kbd kbd-btn" type="button" data-vkey="ArrowLeft" aria-label="Move left">←</button>
-            <button class="kbd kbd-btn" type="button" data-vkey="ArrowDown" aria-label="Move down">↓</button>
-            <button class="kbd kbd-btn" type="button" data-vkey="ArrowRight" aria-label="Move right">→</button>
-            <span class="muted">Move</span>
-            <span class="sep">•</span>
-            <span class="kbd">Enter</span>
-            <span class="muted">Enter House</span>
+      <div class="projects-grid">
+        <a href="projects/shiba-neighborhood/index.html" class="project-card">
+          <span class="project-icon">🐕</span>
+          <div class="project-title">Shiba Neighborhood</div>
+          <div class="project-description">
+            Explore a cute neighborhood with an interactive Shiba! Walk around, visit houses, and play games.
           </div>
-        </div>
+          <span class="project-badge">Interactive Game</span>
+        </a>
 
-        <div class="hud-right">
-          <div class="location-display">
-            <span class="dot"></span>
-            <span id="locationText">Neighborhood</span>
+        <a href="projects/javi-town-trials/index.html" class="project-card">
+          <span class="project-icon">🏘️</span>
+          <div class="project-title">Javi's Town Trials</div>
+          <div class="project-description">
+            A Pokémon-like 2D top-down mini game. Walk around town, enter houses, and complete challenges.
           </div>
-        </div>
-      </section>
+          <span class="project-badge">Adventure</span>
+        </a>
 
-      <section class="game-shell card" aria-label="Game">
-        <div class="game-top">
-          <div class="game-badge">
-            <span class="dot"></span>
-            <span id="tipText">Walk to a house and press Enter to enter!</span>
+        <a href="projects/game-selector/index.html" class="project-card">
+          <span class="project-icon">🔐</span>
+          <div class="project-title">Special Games</div>
+          <div class="project-description">
+            Password-protected collection of special games. Enter the password to access Valentine and Proposal games.
           </div>
-        </div>
-
-        <div class="canvas-wrap">
-          <canvas id="gameCanvas" width="800" height="600" aria-label="Shiba neighborhood game"></canvas>
-        </div>
-
-        <div class="game-bottom">
-          <div class="message" id="messageText" aria-live="polite"></div>
-        </div>
-      </section>
-
-      <!-- Mobile controls panel -->
-      <section id="mobileControlsPanel" class="card mobile-controls-panel" hidden aria-label="Mobile controls">
-        <div class="mobile-controls-inner">
-          <div class="mobile-joy-wrap" aria-label="Joystick">
-            <div id="joyBaseInline" class="joy-base joy-base-inline">
-              <div id="joyKnobInline" class="joy-knob" aria-hidden="true"></div>
-            </div>
-          </div>
-
-          <button id="actionBtnInline" class="action-btn action-btn-inline" type="button" aria-label="Interact">
-            A
-          </button>
-        </div>
-
-        <div class="muted mobile-controls-hint">Use the joystick to move. Tap A to interact.</div>
-      </section>
-    </main>
-
-    <!-- House interaction modal -->
-    <div id="houseModal" class="modal-overlay" hidden>
-      <div class="modal" role="dialog" aria-modal="true">
-        <div class="modal-head">
-          <div class="modal-title" id="houseModalTitle">House</div>
-          <button id="houseModalClose" class="btn btn-ghost btn-sm" type="button" aria-label="Close">
-            Close
-          </button>
-        </div>
-        <div class="modal-body">
-          <p id="houseModalDesc" class="muted"></p>
-          <div class="row">
-            <button id="houseModalEnter" class="btn" type="button">Enter</button>
-            <button id="houseModalCancel" class="btn btn-ghost" type="button">Cancel</button>
-          </div>
-        </div>
+          <span class="project-badge">Password Required</span>
+        </a>
       </div>
     </div>
-
-    <!-- Mobile touch controls -->
-    <div id="touchControls" class="touch-controls" hidden aria-label="Touch controls">
-      <div class="joystick" aria-label="Joystick">
-        <div id="joyBase" class="joy-base">
-          <div id="joyKnob" class="joy-knob" aria-hidden="true"></div>
-        </div>
-      </div>
-
-      <button id="actionBtn" class="action-btn" type="button" aria-label="Interact">
-        A
-      </button>
-    </div>
-
-    <script src="./script.js" defer></script>
   </body>
 </html>
