--- a/projects/game-selector/index.html
+++ b/projects/game-selector/index.html
@@ -13,12 +13,136 @@
 
       body {
         font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: linear-gradient(135deg, #ff6b9d 0%, #c44569 50%, #f8b500 100%);
+        background-size: 400% 400%;
+        animation: gradientShift 3s ease infinite;
         min-height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 1rem;
+        position: relative;
+        overflow: hidden;
+      }
+
+      @keyframes gradientShift {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+      }
+
+      /* Aggressive floating hearts */
+      .heart {
+        position: absolute;
+        font-size: 2rem;
+        animation: floatHeart 2s ease-in-out infinite;
+        opacity: 0.8;
+        pointer-events: none;
+      }
+
+      @keyframes floatHeart {
+        0%, 100% {
+          transform: translate(0, 0) rotate(0deg) scale(1);
+        }
+        25% {
+          transform: translate(20px, -30px) rotate(15deg) scale(1.2);
+        }
+        50% {
+          transform: translate(-15px, -50px) rotate(-15deg) scale(0.9);
+        }
+        75% {
+          transform: translate(25px, -20px) rotate(10deg) scale(1.1);
+        }
+      }
+
+      /* Sparkles */
+      .sparkle {
+        position: absolute;
+        font-size: 1.5rem;
+        animation: sparkleSpin 1.5s linear infinite;
+        opacity: 0.7;
+        pointer-events: none;
+      }
+
+      @keyframes sparkleSpin {
+        0% {
+          transform: rotate(0deg) scale(1);
+          opacity: 0.7;
+        }
+        50% {
+          transform: rotate(180deg) scale(1.5);
+          opacity: 1;
+        }
+        100% {
+          transform: rotate(360deg) scale(1);
+          opacity: 0.7;
+        }
+      }
+
+      /* Bouncing emojis */
+      .bounce-emoji {
+        position: absolute;
+        font-size: 3rem;
+        animation: aggressiveBounce 1s ease-in-out infinite;
+        pointer-events: none;
+      }
+
+      @keyframes aggressiveBounce {
+        0%, 100% {
+          transform: translateY(0) rotate(0deg) scale(1);
+        }
+        25% {
+          transform: translateY(-30px) rotate(-20deg) scale(1.3);
+        }
+        50% {
+          transform: translateY(-50px) rotate(20deg) scale(0.8);
+        }
+        75% {
+          transform: translateY(-20px) rotate(-10deg) scale(1.1);
+        }
+      }
+
+      /* Spinning love text */
+      .love-text {
+        position: absolute;
+        font-size: 4rem;
+        font-weight: 900;
+        color: rgba(255, 255, 255, 0.3);
+        animation: spinLove 3s linear infinite;
+        pointer-events: none;
+        text-shadow: 0 0 20px rgba(255, 20, 147, 0.5);
+      }
+
+      @keyframes spinLove {
+        0% {
+          transform: rotate(0deg) scale(1);
+        }
+        50% {
+          transform: rotate(180deg) scale(1.5);
+        }
+        100% {
+          transform: rotate(360deg) scale(1);
+        }
+      }
+
+      /* Pulsing hearts */
+      .pulse-heart {
+        position: absolute;
+        font-size: 5rem;
+        animation: pulseAggressive 0.8s ease-in-out infinite;
+        opacity: 0.4;
+        pointer-events: none;
+      }
+
+      @keyframes pulseAggressive {
+        0%, 100% {
+          transform: scale(1);
+          opacity: 0.4;
+        }
+        50% {
+          transform: scale(2);
+          opacity: 0.8;
+        }
       }
 
       .container {
@@ -29,6 +153,9 @@
         max-width: 500px;
         width: 100%;
         text-align: center;
+        position: relative;
+        z-index: 10;
+        backdrop-filter: blur(10px);
       }
 
       h1 {
@@ -135,6 +262,37 @@
     </style>
   </head>
   <body>
+    <!-- Aggressive love-themed background animations -->
+    <div class="heart" style="left: 10%; top: 10%; animation-delay: 0s;">💕</div>
+    <div class="heart" style="left: 20%; top: 30%; animation-delay: 0.3s;">💖</div>
+    <div class="heart" style="left: 80%; top: 20%; animation-delay: 0.6s;">💗</div>
+    <div class="heart" style="left: 70%; top: 60%; animation-delay: 0.9s;">💝</div>
+    <div class="heart" style="left: 15%; top: 70%; animation-delay: 1.2s;">💕</div>
+    <div class="heart" style="left: 90%; top: 80%; animation-delay: 1.5s;">💖</div>
+    <div class="heart" style="left: 50%; top: 15%; animation-delay: 1.8s;">💗</div>
+    <div class="heart" style="left: 30%; top: 50%; animation-delay: 2.1s;">💝</div>
+    <div class="heart" style="left: 60%; top: 40%; animation-delay: 2.4s;">💕</div>
+    <div class="heart" style="left: 5%; top: 50%; animation-delay: 2.7s;">💖</div>
+
+    <div class="sparkle" style="left: 25%; top: 25%; animation-delay: 0s;">✨</div>
+    <div class="sparkle" style="left: 75%; top: 45%; animation-delay: 0.5s;">⭐</div>
+    <div class="sparkle" style="left: 45%; top: 65%; animation-delay: 1s;">✨</div>
+    <div class="sparkle" style="left: 85%; top: 15%; animation-delay: 1.5s;">⭐</div>
+    <div class="sparkle" style="left: 15%; top: 85%; animation-delay: 2s;">✨</div>
+    <div class="sparkle" style="left: 55%; top: 35%; animation-delay: 2.5s;">⭐</div>
+
+    <div class="bounce-emoji" style="left: 5%; top: 20%; animation-delay: 0s;">😍</div>
+    <div class="bounce-emoji" style="left: 95%; top: 30%; animation-delay: 0.7s;">🥰</div>
+    <div class="bounce-emoji" style="left: 40%; top: 80%; animation-delay: 1.4s;">😘</div>
+    <div class="bounce-emoji" style="left: 65%; top: 10%; animation-delay: 2.1s;">💋</div>
+
+    <div class="love-text" style="left: 50%; top: 50%; transform: translate(-50%, -50%);">LOVE</div>
+    <div class="love-text" style="left: 50%; top: 50%; transform: translate(-50%, -50%) rotate(45deg); animation-delay: 1.5s;">💕</div>
+
+    <div class="pulse-heart" style="left: 50%; top: 50%; transform: translate(-50%, -50%);">❤️</div>
+    <div class="pulse-heart" style="left: 20%; top: 50%; transform: translate(-50%, -50%); animation-delay: 0.4s;">💜</div>
+    <div class="pulse-heart" style="left: 80%; top: 50%; transform: translate(-50%, -50%); animation-delay: 0.8s;">🧡</div>
+
     <div class="container">
       <div id="passwordSection" class="password-section">
         <h1>🔐 Enter Password</h1>
@@ -203,6 +361,27 @@
 
       // Focus on input when page loads
       passwordInput.focus();
+
+      // Create additional random floating elements for extra chaos
+      function createRandomElement() {
+        const emojis = ['💕', '💖', '💗', '💝', '❤️', '🧡', '💛', '💚', '💙', '💜', '🖤', '🤍', '🤎', '💯', '🔥'];
+        const element = document.createElement('div');
+        element.className = 'heart';
+        element.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+        element.style.left = Math.random() * 100 + '%';
+        element.style.top = Math.random() * 100 + '%';
+        element.style.animationDelay = Math.random() * 2 + 's';
+        element.style.animationDuration = (Math.random() * 2 + 1) + 's';
+        document.body.appendChild(element);
+
+        // Remove after animation
+        setTimeout(() => {
+          element.remove();
+        }, 5000);
+      }
+
+      // Create random elements periodically for extra aggressive meme energy
+      setInterval(createRandomElement, 800);
     </script>
   </body>
 </html>
