Refactor project structure and deployment configuration. Updated .gitignore to exclude unnecessary directories and files. Removed outdated deployment documentation and verification script. Added new project "Wedding Invitation" to the main menu and updated README to reflect changes in project organization and deployment instructions.

--- a/projects/game-selector/index.html
+++ b/projects/game-selector/index.html
@@ -313,6 +313,9 @@
           <a href="../valentine-game/index.html" class="game-btn">
             💕 Super Duper Secret Game
           </a>
+          <a href="../wedding-invitation/index.html" class="game-btn">
+            💒 Wedding Invitation
+          </a>
         </div>
         <button id="backBtn" class="btn back-btn">Back</button>
       </div>
