--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@
           </div>
           <span class="project-badge">Password Required</span>
         </a>
+
+        <a href="projects/wedding-invitation/index.html" class="project-card">
+          <span class="project-icon">💒</span>
+          <div class="project-title">Wedding Invitation</div>
+          <div class="project-description">
+            A beautiful animated wedding invitation with elegant animations, confetti, and a romantic design.
+          </div>
+          <span class="project-badge">Special Event</span>
+        </a>
       </div>
     </div>
   </body>
